--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,67 @@
 .navbar {
   min-height: 100px;
   color: white;
-  font-size: 50px;
   margin-top: 0%;
   font-family: Arial;
   font-size: 100%;
   width: 100%;
-  /* position: fixed; */
-  overflow: hidden
+  margin-top: -1%;
+  overflow: hidden;
 }
 .navbar .navbar-brand {
   padding-left: 15px;
   padding-top: 0px;
   padding-right: 100px;
   height: 40px;
-  line-height: 80px;
-  font-size: 70px;
+  line-height: 110px;
+  font-size: 90px;
 }
 .navbar .navbar-toggle {
   margin-top: 23px;
   padding: 9px 10px;
 }
-.App .navbar-nav > .btn {
+.navbar .navbar-nav {
+  text-align: right;
   padding-top: 26.5px;
   padding-bottom: 26.5px;
   line-height: 27px;
+}
+.navbar .btn-group-lg>.btn, .btn-lg {
+  padding: 0.5rem 2rem;
+  font-size: 1.25rem;
+  line-height: 1.;
+  border-radius: 3.3rem;
+  margin-bottom: -100px;
+}
+@keyframes ticker {
+  0% { transform: translate3d(0, 0, 0); }
+  100% { transform: translate3d(-100%, 0, 0); }
+}
+.tcontainer{
+  width: 100%;
+  overflow: hidden;
+}
+.ticker-wrap {
+  width: 100%;
+  padding-left: 100%;
+  background-color: #eee;
+}
+.ticker-move {
+  display: inline-block;
+  white-space: nowrap;
+  padding-right: 100%;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  animation-name: ticker;
+  animation-duration: 20s;
+}
+.ticker-move:hover {
+  animation-play-state: paused;
+}
+.ticker-item {
+  display: inline-block;
+  padding: 0 2rem;
+}
+.text {
+  word-wrap: break-word;
 }
