--- a/src/App.css
+++ b/src/App.css
@@ -1,37 +1,80 @@
-.navbar {
-  min-height: 100px;
-  color: white;
-  margin-top: 0%;
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
+.App {
+  text-align: center;
+  position: relative;
+}
+
+.App-logo {
+  height: 80px;
+}
+
+.navbar-brand {
+  display: inline-block;
+  padding-top: .3125rem;
+  padding-bottom: .3125rem;
+  margin-left: 1rem;
+  margin-right: 17rem;
+  font-family: 'Baloo Paaji 2', cursive;
+  font-size: 5.25rem;
+  line-height: inherit;
+  white-space: nowrap;
+}
+.nav {
+  background-color: rgb(33, 82, 247);
   font-family: Arial;
   font-size: 100%;
-  width: 100%;
-  margin-top: -1%;
-  overflow: hidden;
+  color: white;
 }
-.navbar .navbar-brand {
-  padding-left: 15px;
-  padding-top: 0px;
-  padding-right: 100px;
-  height: 40px;
-  line-height: 110px;
-  font-size: 90px;
-}
-.navbar .navbar-toggle {
-  margin-top: 23px;
-  padding: 9px 10px;
-}
-.navbar .navbar-nav {
-  text-align: right;
-  padding-top: 26.5px;
-  padding-bottom: 26.5px;
-  line-height: 27px;
-}
-.navbar .btn-group-lg>.btn, .btn-lg {
+.nav a {
+  display: inline-block;
+  text-align: center;
+  margin: 50px 40px;
   padding: 0.5rem 2rem;
-  font-size: 1.25rem;
-  line-height: 1.;
+  border: 1px rgba(255,255,255,0.5) solid;
+  transition: all 0.3s linear;
+  text-decoration: none;
+  color: black;
+  background-color: white;
   border-radius: 3.3rem;
-  margin-bottom: -100px;
+  font-size: 1.25rem;
+
+}
+
+section {
+  padding: 50px 0;
+  max-width: 600px;
+  margin: 0 auto;
+}
+.page {
+  position: absolute;
+  top: 100px;
+  left: 0;
+  right: 0;
+}
+
+/* simple - enter transition 300ms, exit 150ms */
+.fade-appear,
+.fade-enter {
+    opacity: 0;
+    z-index: 1;
+}
+.fade-appear-active,
+.fade-enter.fade-enter-active {
+    opacity: 1;
+    transition: opacity 300ms linear 150ms;
+}
+
+.fade-exit {
+    opacity: 1;
+}
+
+.fade-exit.fade-exit-active {
+    opacity: 0;
+    transition: opacity 150ms linear;
 }
 @keyframes ticker {
   0% { transform: translate3d(0, 0, 0); }
@@ -40,11 +83,14 @@
 .tcontainer{
   width: 100%;
   overflow: hidden;
+
 }
 .ticker-wrap {
   width: 100%;
   padding-left: 100%;
   background-color: #eee;
+  height: 50px;
+  font-size: 30px;
 }
 .ticker-move {
   display: inline-block;
@@ -53,7 +99,7 @@
   animation-iteration-count: infinite;
   animation-timing-function: linear;
   animation-name: ticker;
-  animation-duration: 20s;
+  animation-duration: 40s;
 }
 .ticker-move:hover {
   animation-play-state: paused;
@@ -62,6 +108,55 @@
   display: inline-block;
   padding: 0 2rem;
 }
-.text {
-  word-wrap: break-word;
+
+
+
+
+
+
+
+
+/* advanced - enter transition 800ms, exit 150ms */
+/* .fade-appear,
+.fade-enter {
+    opacity: 0;
+    z-index: 1;
+    transform: translateY(-10px);
 }
+.fade-appear p,
+.fade-enter p {
+  transform: translateY(-5px);
+  opacity: 0;
+}
+.fade-appear-active,
+.fade-enter.fade-enter-active {
+  opacity: 1;
+  transform: translateY(0);
+  transition: opacity 300ms linear 150ms, transform 300ms ease-out 150ms;
+}
+.fade-appear-active p,
+.fade-enter.fade-enter-active p {
+  transform: translateY(0);
+  opacity: 1;
+}
+.fade-appear-active p:nth-child(2),
+.fade-enter.fade-enter-active p:nth-child(2) {
+  transition: opacity 300ms linear 300ms, transform 300ms ease-out 300ms;
+}
+.fade-appear-active p:nth-child(3),
+.fade-enter.fade-enter-active p:nth-child(3) {
+  transition: opacity 300ms linear 400ms, transform 300ms ease-out 400ms;
+}
+.fade-appear-active p:nth-child(4),
+.fade-enter.fade-enter-active p:nth-child(4) {
+  transition: opacity 300ms linear 500ms, transform 300ms ease-out 500ms;
+}
+.fade-exit {
+    opacity: 1;
+    transform: translateY(0);
+}
+.fade-exit.fade-exit-active {
+    opacity: 0;
+    transform: translateY(-10px);
+    transition: opacity 150ms linear, transform 150ms ease-in;
+} */
